--- a/client/src/layouts/navbar/Navbar.css
+++ b/client/src/layouts/navbar/Navbar.css
@@ -1,26 +1,6 @@
-.navbar {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	background-color: #333;
-	color: #fff;
-	opacity: 0.8;
-	width: 100%;
-	height: 70px;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	padding: 0 30px;
-}
-
-.logo {
-	margin-left: 5%;
-	margin-bottom: 15px;
-	font-size: 2em;
-}
-
-.panel {
-	margin-right: 5%;
+.css-1oqqzyl-MuiContainer-root{
+	max-width: none !important;
+	padding: 0% !important;
 }
 
 button.MuiButtonBase-root,
@@ -29,15 +9,10 @@ a.MuiButtonBase-root {
 }
 
 .css-1e6y48t-MuiButtonBase-root-MuiButton-root:hover {
-	background-color: burlywood !important;
+	background-color: #132f4c;
+	color: #91b9e3
 }
 
-ul {
-	display: flex;
-}
-
-li {
-	list-style-type: none;
-	padding: 10px;
-	margin-left: 10px;
+body {
+  margin: 0;
 }
